samples/_failures_safe/1761216629_8b65e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e9fb7ed.c: In function ‘main’:
./samples/SAFE/__tmp_2e9fb7ed.c:158:20: error: missing terminating " character
  158 |             printf("Invalid input. Exiting.\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2e9fb7ed.c:158:13: error: expected expression at end of input
  158 |             printf("Invalid input. Exiting.\n
      |             ^~~~~~
./samples/SAFE/__tmp_2e9fb7ed.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e9fb7ed.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e9fb7ed.c:158:13: error: expected declaration or statement at end of input
